@@ -1,3 +1,8 @@
+20200419		6.3.1
+	- Added checks to ensure the correct firmware version is loaded.
+	V6 Rev.f and older boards need the "firmware.V6.revF.dfu" firmware updates.
+	V6 2020c and newer boards need the "firmware.V6.2020.dfu" firmware updates.
+
 20200216		6.3.0
 	- Breaking change: Firmware updates on windows now require the UsbDK
 	driver to be installed.
